fixed some wonky paragraph widths on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     
 }
 
+
 #logo { 
     position: absolute;
     left:5%; 
@@ -26,7 +27,7 @@ body {
 }
 
 nav { 
-    height:40px; 
+    height:60px; 
     background-color: rgb(236, 236, 236);
    position:fixed; 
    top:0; 
@@ -36,17 +37,19 @@ nav {
 .monopoly { 
     content:url("./assets2/monscreen4-small.png"); 
     width:100%; 
+    height:50%; 
 }
 
 .studyapp { 
     content:url("./assets2/studyappsmall.png"); 
     width:100%;
+    height:50%;
 }
 
 #hamburgericon{
     position: absolute;
     right:10%; 
-    top:0px;  
+    top:15px;  
 }
 
 .smallbutton:hover { 
@@ -64,7 +67,7 @@ nav {
   
     color:black; 
     position:absolute; 
-    top:40px; 
+    top:60px; 
     padding-top:10%; 
 
     transition-duration: 1200ms;
@@ -112,10 +115,14 @@ a{
  
 }
 
+button  { 
+    color:white; 
+}
+
 #hero >h1 { 
     font-size:8vw; 
-    padding-left:10%; 
-    padding-right:10%; 
+    padding-left:5%; 
+    padding-right:5%; 
     font-weight: bold;
 }
 
@@ -124,6 +131,7 @@ a{
     padding-left:5%; 
     padding-right:5%; 
     font-weight: 400;
+  
 }
 
 #contactmain{
@@ -275,14 +283,34 @@ form {
     display:none; 
 }
 
-#mobilelinks { 
-    display:none; 
+.mobilelink { 
+    display: none;
+}
+
+.mobilelink.active { 
+    display:block; 
+}
+
+#paragraph-wrapper > p { 
+  width:90%; 
 }
 
 
-
-
 @media (min-width:900px){
+#paragraph-wrapper > p { 
+    width:100%;
+    font-size:24px;  
+    
+}
+
+
+#contactmain { 
+    width:20vw; 
+    position:absolute; 
+    bottom:5%; 
+  
+   
+}
   
 #screen1 { 
     content:url("/assets2/design1.jpg")
@@ -343,6 +371,7 @@ form {
         font-size: 2vw; 
          width:50%; 
          padding-left:5%; 
+         margin-top:-2.5%; 
     }
     
     #contactmain { 
@@ -369,6 +398,7 @@ form {
         width:25%; 
         height:60vh;  
         z-index: 0;
+
        }
 
        .screen{
@@ -446,7 +476,9 @@ form {
        }
 
  
-
+#logo { 
+    top:20px; 
+}
        #sendbutton { 
         width:50%; 
        }
